--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -29,37 +29,6 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-body">
-                <form class="form-inline query-form-container readonly" id="form-operator" onsubmit="return false">
-                    <div class="form-group">
-                        <label class="col-form-label mr-2" for="type">场景</label>
-                        <select id="type" name="type" class="form-control" onchange="changeType(this)">
-                            <option value="INBOUND">入库</option>
-                            <option value="OUTBOUND">出库</option>
-                            <option value="RETURN">退货</option>
-                            <option value="CANCEL">取消</option>
-                            <option value="DISPLAY">显示</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label mr-2" for="referenceType">参考凭证</label>
-                        <select id="referenceType" name="referenceType" class="form-control" onchange="changeReferenceType(this)">
-                            <option value="OTHER" hidden>无</option>
-                            <option value="MATERIAL_DOCUMENT" hidden>物料凭证</option>
-                            <option value="PO" hidden>采购订单</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" id="referenceCode" type="text" name="referenceCode" required>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary mr-2" type="button" id="execBtn" onclick="execute(this)">
-                            <i class="fa fa-cog"></i> 确定</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
                 <form class="form-inline query-form-container" id="form-header">
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="documentDate">凭证日期</label>
@@ -92,7 +61,7 @@
                                     <th style="width: 40px;">序号</th>
                                     <th><label class="col-form-label col-sm-2 required">物料</label></th>
                                     <th><label class="col-form-label col-sm-2">描述</label></th>
-                                    <th><label class="col-form-label col-sm-2 required">数量</label></th>
+                                    <th><label class="col-form-label col-sm-2 required">盘点数量</label></th>
                                     <th><label class="col-form-label col-sm-2">单位</label></th>
                                     <th><label class="col-form-label col-sm-2">备注</label></th>
                                     <th style="width: 50px;"></th>
@@ -125,16 +94,8 @@
     <script th:src="@{/js/jquery.table.js}"></script>
     <script th:src="@{/editable-table/editable-table.js}"></script>
     <script>
-        let formOperator = document.getElementById('form-operator');
-        let $operatorBar = $('#operator-bar')
-        let $referenceCode = $('#referenceCode')
-        let $execBtn= $('#execBtn')
         let formHeader = document.getElementById('form-header');
         let formItem = document.getElementById('form-item');
-        let $documentDate = $('#documentDate')
-        let $plantId = $('#plantId')
-        let $operatorId = $('#operatorId')
-        let $remark = $('#remark')
 
         let editableTableIndex = 1
 
@@ -163,127 +124,6 @@
                 name: "remark",
             }
         ]
-
-        formOperator.addEventListener('submit', function (event) {
-            execute()
-        }, false)
-
-        let selectMapping = {
-            "INBOUND": ["OTHER", "PO"],
-            "OUTBOUND": ["OTHER"],
-            "RETURN": ["MATERIAL_DOCUMENT", "PO"],
-            "CANCEL": ["MATERIAL_DOCUMENT"],
-            "DISPLAY": ["MATERIAL_DOCUMENT"]
-        }
-
-        let referenceTypeDom = document.getElementById('referenceType')
-        let type = document.getElementById('type')
-
-        changeType(document.getElementById('type'))
-
-        function changeType(select) {
-            let selected = false
-            for (let option of referenceTypeDom.options) {
-                option.hidden = true
-                for(let referenceType of selectMapping[select.value]) {
-                    if (option.value === referenceType) {
-                        option.hidden = false
-                        if (!selected) {
-                            option.selected = 'selected'
-                            selected = true
-
-                            if (option.value === 'OTHER') {
-                                $referenceCode.hide()
-                                $execBtn.hide()
-                                $("#form-item :input:not(readonly)").prop("disabled", false)
-                                $("#form-item input[readonly]").prop("disabled", true)
-                            } else {
-                                $referenceCode.show()
-                                $execBtn.show()
-                                $("#form-item :input").prop("disabled", true);
-                            }
-                        }
-                        break
-                    }
-                }
-            }
-
-            if (select.value === 'DISPLAY') {
-                $operatorBar.hide()
-            } else {
-                $operatorBar.show()
-            }
-            reset()
-        }
-
-        function changeReferenceType(select) {
-            if (select.value === 'OTHER') {
-                $referenceCode.hide()
-                $execBtn.hide()
-                $("#form-item :input:not(readonly)").prop("disabled", false)
-                $("#form-item input[readonly]").prop("disabled", true)
-            } else {
-                $referenceCode.show()
-                $execBtn.show()
-                $("#form-item :input").prop("disabled", true);
-            }
-            reset()
-        }
-        
-        function execute() {
-            let formOperatorValidity = formOperator.checkValidity()
-            formOperator.classList.add('was-validated')
-            if (formOperatorValidity) {
-                console.log(referenceTypeDom.value)
-                console.log($referenceCode.val())
-
-                tableReset()
-                // ajax
-                $.get("/inventory/documents", {type: type.value, referenceType:referenceTypeDom.value, referenceCode: $referenceCode.val()},function (res) {
-                    console.log(res)
-                    $documentDate.val(res.documentDate)
-                    $plantId.val(res.plantId)
-                    $operatorId.val(res.operatorId)
-                    $remark.val(res.remark)
-
-                    for (let item of res.itemList) {
-                        $editableTable.editableTable('addEmptyLine')
-
-                        let $tr = $("#table tr:last-child").prev()
-                        $tr.children().append("<input type='hidden' name='referenceItemId'>")
-
-                        $tr.find("input[name]").each(function () {
-                            $(this).val(item[this.name])
-                        })
-
-                        // 其他值
-                        $tr.find('td:nth-child(5) input[type=text]').val(item.unitText)
-                        // 出库入库
-                        $tr.find('td:nth-child(4)').css('position', 'relative').append("<span style='position: absolute;left: 5px; top: 8px;'>"+(item.movementType === 'OUTBOUND' ? '-' : '+')+"</span>")
-                    }
-
-                    if (type.value === 'DISPLAY') {
-                        $("form :input").prop("disabled", true);
-                        $referenceCode.prop("disabled", false);
-                        $execBtn.prop("disabled", false);
-                        $('#table .operator').hide()
-                    } else if (type.value === 'CANCEL') {
-                        if (res.canceled) {
-                            toastr.warning('物料凭证已经被取消了，不能重复取消!')
-                        }
-                        $("form :input").prop("disabled", true);
-                        $('#table .operator').hide()
-                    } else {
-                        $("form.readonly :input").prop("disabled", true);
-                        $("#table tr :input").prop("disabled", true);
-
-                        $('#table tbody tr:not(:last-child) :nth-child(4) :input, #table tbody tr:not(:last-child) :nth-child(6) :input').prop("disabled", false);
-                    }
-                }).fail(function(err) {
-                    console.log(err.responseJSON)
-                })
-            }
-        }
 
         // end
         let dialogInput = $('#dialogInput');
@@ -455,11 +295,9 @@
         function reset() {
             formHeader.classList.remove('was-validated')
             formItem.classList.remove('was-validated')
-            formOperator.classList.remove('was-validated')
 
             tableReset()
 
-            document.getElementById('referenceCode').value = ''
             $("form.readonly :input").prop("disabled", false);
             $("form-item #table tr:last-child").prop("disabled", false);
         }
@@ -513,29 +351,26 @@
             }
 
             params = $.extend({},
-                params, $('#form-operator').form2json({allowEmptyMultiVal:true}), $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
+                params, $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
 
             console.log(params)
+
             params.code = '1' // 临时code
             $.ajax({
-                url: '/inventory',
+                url: '/inventory/count',
                 type: "POST",
                 data: JSON.stringify(params),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function(res){
-                    toastr.success('提交成功 ' + res.data);
+                    let msg = res.data
+                    if (!msg) {
+                        msg = '没有产生物料凭证！'
+                    }
+                    toastr.success('盘点完成！' + msg);
                     reset()
                 }
             });
-        }
-
-        let urlObject = getUrlObject();
-        if (urlObject.referenceCode) {
-            document.getElementById('type').value = 'DISPLAY'
-            changeType(document.getElementById('type'))
-            $referenceCode.val(urlObject.referenceCode)
-            execute()
         }
     </script>
 </th:block>
